syntax = "proto3"; //Specify proto3 version.

package Customer; //Optional: unique package name.

//Service. define the methods that the grpc server can expose to the client.
service customerManagementService {
  rpc register       (RegisterRequest)        returns (RegisterResponse);
  rpc login          (LoginRequest)           returns (LoginResponse);
  rpc forgetPassword (ForgetPasswordRequest)  returns (SimpleResponse);
  rpc update         (UpdateRequest)          returns (SimpleResponse);
  rpc remove         (SimpleTokenBaseRequest) returns (SimpleResponse);
  rpc verify         (SimpleTokenBaseRequest) returns (SimpleResponse);
  rpc resetPassword  (ResetPasswordRequest) returns (SimpleResponse);
  rpc changePassword (ChangePasswordRequest)  returns (SimpleResponse);
  
  rpc getMe          (SimpleTokenBaseRequest) returns (getMeResponse);
  
 // rpc orderService (User) returns (LegalAge);  TODO:   after making  serviceManagemnetService
 // rpc getApplicant (User) returns (LegalAge);   TODO:   after making  serviceProviderManagemnetService
  
}


message SimpleResponse {
  int32  code    = 1;
  string message = 2;
}

message SimpleTokenBaseRequest{
  string token = 1;
}

message ResetPasswordRequest{
  string token = 1;
  string new_password =2;
}

message RegisterRequest {
  string fullname    = 1;
  string email        = 2;
  string phonenumber = 3;
  string username     = 4;
  string password     = 5;
}

message RegisterResponse {
  int32  code        = 1;
  string message     = 2;
  string token       = 3;
  string userstatus = 4;
  
}

message LoginRequest {
  string username = 1;
  string password  = 2;
}

message LoginResponse {
  int32  code    = 1;
  string message = 2;
  string token   = 3;
}

message ForgetPasswordRequest{
  string email = 1;
}

message UpdateRequest {
  string fullname    = 1;
  string phonenumber = 2;
  string username     = 3;
  string token        = 4;
}

message ChangePasswordRequest {
  string oldpassword = 1;
  string newpassword = 2;
  string token       = 3;
}

message getMeResponse {
  int32  code         = 1;
  string message      = 2;
  string fullname    = 3;
  string email        = 4;
  string phonenumber = 5;
  string username     = 6;
  string status       = 7;
}

// Message Type definition for LeaveFeedback response.